Lesson 9: Add search, sorting, filters to catalog (api)
